kubernetes/apps/networking/envoy-gateway/config/internal-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.kubernetes.io/target: &hostname internal.woo-ops.dev
    gatus.home-operations.com/endpoint: |
      group: internal
      guarded: true
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.20.225
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: woo-ops-dev-tls
    - name: wow-auth
      protocol: TCP
      port: 3724
      allowedRoutes: {kinds: [{kind: TCPRoute}]}
    - name: wow-world
      protocol: TCP
      port: 8085
      allowedRoutes: {kinds: [{kind: TCPRoute}]}
