kubernetes/apps/networking/envoy-gateway/config/backend-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  compression:
    - type: Brotli
    - type: Gzip
  connection:
    bufferLimit: 64Mi
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
